// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logout > Logs out on click > KeyStore.getKey() 1`] = `undefined`;

exports[`Logout > Logs out on click > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('THEME') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('USERNAME') 1`] = `null`;

exports[`Logout > Logs out on click > allCalls 1`] = `
[
  [
    "request",
    {
      "calledWith": {
        "body": "{"username":"d","password":"1","notes":[],"deleted_note_ids":[]}",
        "headers": {
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
      "name": "/auth/login",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          {
            "content": {
              "body": "😬ö",
              "delta": {
                "ops": [
                  {
                    "insert": "Note with special characters

😬ö
  sss
	
Ketchup
Salt 
Sugar

¯\\_(ツ)_/¯

──────────────────────────────────
──────▄▀▀▄────────────────▄▀▀▄────
─────▐▒▒▒▒▌──────────────▌▒▒▒▒▌───
─────▌▒▒▒▒▐─────────────▐▒▒▒▒▒▐───
────▐▒▒▒▒▒▒▌─▄▄▄▀▀▀▀▄▄▄─▌▒▒▒▒▒▒▌──
───▄▌▒▒▒▒▒▒▒▀▒▒▒▒▒▒▒▒▒▒▀▒▒▒▒▒▒▐───
─▄▀▒▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌───
▐▒▒▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐───
▌▒▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌──
▒▒▐▒▒▒▒▒▒▒▒▒▄▀▀▀▀▄▒▒▒▒▒▄▀▀▀▀▄▒▒▐──
▒▒▌▒▒▒▒▒▒▒▒▐▌─▄▄─▐▌▒▒▒▐▌─▄▄─▐▌▒▒▌─
▒▐▒▒▒▒▒▒▒▒▒▐▌▐█▄▌▐▌▒▒▒▐▌▐█▄▌▐▌▒▒▐─
▒▌▒▒▒▒▒▒▒▒▒▐▌─▀▀─▐▌▒▒▒▐▌─▀▀─▐▌▒▒▒▌
▒▌▒▒▒▒▒▒▒▒▒▒▀▄▄▄▄▀▒▒▒▒▒▀▄▄▄▄▀▒▒▒▒▐
▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▄▒▒▒▒▒▒▒▒▒▒▒▐
▒▌▒▒▒▒▒▒▒▒▒▒▒▒▀▒▀▒▒▒▀▒▒▒▀▒▀▒▒▒▒▒▒▐
▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▀▒▒▒▄▀▄▒▒▒▀▒▒▒▒▒▒▒▐
▒▐▒▒▒▒▒▒▒▒▒▒▀▄▒▒▒▄▀▒▒▒▀▄▒▒▒▄▀▒▒▒▒▐
▒▓▌▒▒▒▒▒▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▐
▒▓▓▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌
▒▒▓▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌─
▒▒▓▓▀▀▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐──
▒▒▒▓▓▓▓▓▀▀▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▀▀▒▌─
▒▒▒▒▒▓▓▓▓▓▓▓▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▒▒▒▒▒▐─
▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌
▒▒▒▒▒▒▒█▒█▒█▀▒█▀█▒█▒▒▒█▒█▒█▒▒▒▒▒▒▐
▒▒▒▒▒▒▒█▀█▒█▀▒█▄█▒▀█▒█▀▒▀▀█▒▒▒▒▒▒▐
▒▒▒▒▒▒▒▀▒▀▒▀▀▒▀▒▀▒▒▒▀▒▒▒▀▀▀▒▒▒▒▒▒▐
█▀▄▒█▀▄▒█▀▒█▀█▒▀█▀▒█▒█▒█▒█▄▒█▒▄▀▀▐
█▀▄▒█▀▄▒█▀▒█▄█▒▒█▒▒█▀█▒█▒█▀██▒█▒█▐
▀▀▒▒▀▒▀▒▀▀▒▀▒▀▒▒▀▒▒▀▒▀▒▀▒▀▒▒▀▒▒▀▀▐
▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐

",
                  },
                ],
              },
              "title": "Note with special characters",
            },
            "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
            "timestamp": 0,
          },
          {
            "content": {
              "body": "amet consectetur adipisicing",
              "delta": {
                "ops": [
                  {
                    "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
                  },
                ],
              },
              "title": "Amet consectetur adipisicing",
            },
            "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
            "timestamp": 0,
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "get_access_token",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": undefined,
        "headers": {
          "Authorization": "Bearer test-token",
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
          "X-Username": "d",
        },
        "method": "POST",
      },
      "name": "/auth/logout",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "delete_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": false,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`Logout > Logs out on click > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Logout > Logs out on click > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Logout > Logs out on click > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    {
      "content": {
        "body": "😬ö",
        "delta": {
          "ops": [
            {
              "insert": "Note with special characters

😬ö
  sss
	
Ketchup
Salt 
Sugar

¯\\_(ツ)_/¯

──────────────────────────────────
──────▄▀▀▄────────────────▄▀▀▄────
─────▐▒▒▒▒▌──────────────▌▒▒▒▒▌───
─────▌▒▒▒▒▐─────────────▐▒▒▒▒▒▐───
────▐▒▒▒▒▒▒▌─▄▄▄▀▀▀▀▄▄▄─▌▒▒▒▒▒▒▌──
───▄▌▒▒▒▒▒▒▒▀▒▒▒▒▒▒▒▒▒▒▀▒▒▒▒▒▒▐───
─▄▀▒▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌───
▐▒▒▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐───
▌▒▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌──
▒▒▐▒▒▒▒▒▒▒▒▒▄▀▀▀▀▄▒▒▒▒▒▄▀▀▀▀▄▒▒▐──
▒▒▌▒▒▒▒▒▒▒▒▐▌─▄▄─▐▌▒▒▒▐▌─▄▄─▐▌▒▒▌─
▒▐▒▒▒▒▒▒▒▒▒▐▌▐█▄▌▐▌▒▒▒▐▌▐█▄▌▐▌▒▒▐─
▒▌▒▒▒▒▒▒▒▒▒▐▌─▀▀─▐▌▒▒▒▐▌─▀▀─▐▌▒▒▒▌
▒▌▒▒▒▒▒▒▒▒▒▒▀▄▄▄▄▀▒▒▒▒▒▀▄▄▄▄▀▒▒▒▒▐
▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▄▒▒▒▒▒▒▒▒▒▒▒▐
▒▌▒▒▒▒▒▒▒▒▒▒▒▒▀▒▀▒▒▒▀▒▒▒▀▒▀▒▒▒▒▒▒▐
▒▌▒▒▒▒▒▒▒▒▒▒▒▒▒▀▒▒▒▄▀▄▒▒▒▀▒▒▒▒▒▒▒▐
▒▐▒▒▒▒▒▒▒▒▒▒▀▄▒▒▒▄▀▒▒▒▀▄▒▒▒▄▀▒▒▒▒▐
▒▓▌▒▒▒▒▒▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▐
▒▓▓▌▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌
▒▒▓▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌─
▒▒▓▓▀▀▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐──
▒▒▒▓▓▓▓▓▀▀▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▄▀▀▒▌─
▒▒▒▒▒▓▓▓▓▓▓▓▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▒▒▒▒▒▐─
▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▌
▒▒▒▒▒▒▒█▒█▒█▀▒█▀█▒█▒▒▒█▒█▒█▒▒▒▒▒▒▐
▒▒▒▒▒▒▒█▀█▒█▀▒█▄█▒▀█▒█▀▒▀▀█▒▒▒▒▒▒▐
▒▒▒▒▒▒▒▀▒▀▒▀▀▒▀▒▀▒▒▒▀▒▒▒▀▀▀▒▒▒▒▒▒▐
█▀▄▒█▀▄▒█▀▒█▀█▒▀█▀▒█▒█▒█▒█▄▒█▒▄▀▀▐
█▀▄▒█▀▄▒█▀▒█▄█▒▒█▒▒█▀█▒█▒█▀██▒█▒█▐
▀▀▒▒▀▒▀▒▀▀▒▀▒▀▒▒▀▒▒▀▒▀▒▀▒▀▒▒▀▒▒▀▀▐
▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐

",
            },
          ],
        },
        "title": "Note with special characters",
      },
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 0,
    },
    {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 0,
    },
  ],
  "selectedNote": {
    "content": {
      "body": "amet consectetur adipisicing",
      "delta": {
        "ops": [
          {
            "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
          },
        ],
      },
      "title": "Amet consectetur adipisicing",
    },
    "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
    "timestamp": 0,
  },
}
`;

exports[`Logout > Logs out on click > openedPopup 1`] = `undefined`;

exports[`Logout > Logs out on click > selectedTheme 1`] = `"System"`;

exports[`Logout > Logs out on click > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Logout > Logs out on click > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Logout > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`Logout > Mounts > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('THEME') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('USERNAME') 1`] = `null`;

exports[`Logout > Mounts > allCalls 1`] = `[]`;

exports[`Logout > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Logout > Mounts > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Logout > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Logout > Mounts > openedPopup 1`] = `undefined`;

exports[`Logout > Mounts > selectedTheme 1`] = `"System"`;

exports[`Logout > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Logout > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
